src/test/deca/context/invalid/Objet/newClass.des
New must be followed by a class Type 
